# rag_benchmarking

./: .gitignore  README.md  env.sample  makefile  pyproject.toml
docs/: ADDING_COMPONENTS.md  ADDING_DEPENDENCIES.md  CREATING_EXPERIMENTS.md
src/: corpus_size_check.py  embedding_models.py  experiment_runner.py  experiments.py  llm_models.py  logging_utils.py  main.py  metrics.py  shell.py
src/benchmark_datasets/: __init__.py  _benchmark_dataset.py  beir_dataset.py  frame_dataset.py  hotpotqa_dataset.py  ms_marco_dataset.py  niah_dataset.py  niah_utils.py  ragtruth_dataset.py
src/datastores/: _datastore.py  azure_ai_search_store.py  milvus_datastore.py  pinecone_datastore.py  qdrant_datastore.py  vertex_ai_datastore.py
src/embeddings/: _embedding.py  cohere_embedding.py  embedding_helper.py  embedding_models.py  gemini_embedding.py  modern_bert_embedding.py  openai_embedding.py  stella_embedding.py
src/evaluators/: _evaluator.py  beir_evaluator.py  frame_evaluator.py
src/retrievers/: _retriever.py  azure_ai_search_retriever.py  pinecone_retriever.py  qdrant_retriever.py  vertex_ai_retriever.py
src/utils/: azure_test.py  download_embeddings.py  openai_test.py  test_quadrant.py
